# duckstation

data/resources/: metal_shaders.metallib
src/core/: bios.cpp  cdrom.cpp  cdrom.h  cpu_core.cpp  cpu_core.h  dma.cpp  gpu.h  interrupt_controller.cpp  spu.cpp
src/duckstation-regtest/: CMakeLists.txt  regtest_host.cpp
src/util/: CMakeLists.txt  bridge_memory_registry.cpp  bridge_memory_registry.h  cd_image.cpp  cd_image.h  cd_image_cue.cpp
